--- a/lib/dune
+++ b/lib/dune
@@ -1,7 +1,7 @@
 (library
  (name otp)
  (public_name otp)
- (modules ast)
+ (modules ast parser)
  (libraries angstrom)
  (preprocess
   (pps ppx_expect ppx_deriving.show ppx_compare))
