--- a/dune
+++ b/dune
@@ -12,5 +12,5 @@
  (public_name main)
  (preprocess
   (pps ppx_expect ppx_deriving.show))
- (modules test main infertypes infer)
+ (modules main preinit infertypes infer)
  (libraries stdio ocaml-compiler-libs.common))
