--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -27,11 +27,14 @@ jobs:
         with:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
 
-      - run: opam install . --deps-only --with-test
+      - run: opam install --deps-only --with-test .
 
       - run: opam exec -- dune build
 
-      - run: opam exec -- dune runtest
-
       - run: opam exec -- dune fmt
 
+      - run: opam exec -- dune runtest --instrument-with bisect_ppx --force
+
+      - run: opam exec -- bisect-ppx-report send-to Coveralls
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
